{
    "name": "PlayerSelection",
    "maps": [
        {
            "name": "SelectionAction",
            "id": "5653d062-a15b-4998-a3ee-3e0a6ecb408d",
            "actions": [
                {
                    "name": "SelectionControls",
                    "type": "Button",
                    "id": "8b864eb7-fbeb-40c1-9e01-967282e60fe5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "cfdd621d-a109-46fd-841e-0ca9c283eac5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SelectShift",
                    "type": "Button",
                    "id": "f310a73f-6ca0-40b1-8b10-76bcc5e08013",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ControlA",
                    "type": "Button",
                    "id": "2599d3a2-907c-4f62-8d48-399899b43de4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "628d0602-da17-4ae7-aea4-4deee1d8c5ac",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectionControls",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a016573-d2ab-457c-98d0-907342294b54",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1c052ef-4ff7-4c4e-ae61-cb89e77d57be",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectShift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "cmdA",
                    "id": "20fdd699-f8fc-40e0-bf70-0daa23e48d4f",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlA",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "b9923576-c54b-4b5f-ba88-6ea588ac4a50",
                    "path": "<Keyboard>/leftMeta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlA",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "ca7a8bed-b642-4c67-8bba-7adf6b0a3e7f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlA",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "controlA",
                    "id": "e14e3d9e-adf0-456b-b247-bf059c8e1660",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlA",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "dbf8646b-d88a-4274-9f01-7e8d72e6457a",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlA",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "3513f233-a9b0-4c20-b7a2-b462190a6e4d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlA",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}